[tool.poetry]
name = "cyngi-test"
version = "0.1.0"
description = ""
authors = ["MadeleineHarbom <madeleine.harbom@gmail.com>"]
readme = "README.md"
packages = [{include = "cyngi_test"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

