[tool.poetry]
name = "cyngi-test"
version = "0.1.0"
description = ""
authors = ["MadeleineHarbom <madeleine.harbom@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]




[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
httpx = "^0.28.1"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
debugpy = "^1.8.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'scripts:dev'

[tool.pytest.ini_options]
pythonpath = ["./src"]

